[package]
name = "tree-sitter-cobol"
description = "a language parser for COBOL"
version = "0.1.0"
authors = ["William Walker <w_walker@icloud.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cobol"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/willswire/tree-sitter-cobol"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.5"
